--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             -webkit-user-select: none; 
             user-select: none; 
             -webkit-touch-callout: none;
+            /* Убирает зум при двойном тапе на большинстве мобильных браузеров */
+            touch-action: manipulation; 
         }
 
         @font-face {
@@ -48,20 +50,21 @@
             overflow: hidden; display: flex; flex-direction: column; 
             align-items: center;
             transition: background 0.5s ease, color 0.5s ease;
+            /* Полный запрет жестов масштабирования */
             touch-action: none; 
         }
 
         #custom-cursor {
             width: 6px; height: 6px; border-radius: 50%;
             position: fixed; 
-            top: 0; left: 0; /* Базовое положение в углу */
+            top: 0; left: 0;
             pointer-events: none; 
             z-index: 999999 !important; 
             mix-blend-mode: difference;
             background: #fff;
             opacity: 0;
             will-change: transform;
-            transition: opacity 0.5s ease;
+            transition: opacity 0.3s ease; /* Плавное испарение */
         }
 
         .top-bar {
@@ -153,10 +156,10 @@
     </div>
 
     <div class="content-fade" id="main-content">
-        <a href="https://instagram.com" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
-        <a href="https://t.me" class="link-text interactive" target="_blank">tgk: @11</a>
-        <a href="https://twitch.tv" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
-        <a href="https://tiktok.com" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
+        <a href="https://instagram.com/ogdnka" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
+        <a href="https://t.me/eeleve" class="link-text interactive" target="_blank">tgk: @11</a>
+        <a href="https://twitch.tv/bananapapa228" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
+        <a href="https://tiktok.com/@dnkanle" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
         <a href="javascript:void(0)" class="link-text interactive" id="discord-btn">discord: @dnka</a>
 
         <div class="gallery-container">
@@ -232,21 +235,21 @@
             }
         }
 
-        // КУРСОР: Исправленный трекинг
+        // КУРСОР: Трекинг и испарение
         const updateCursorPos = (e) => {
             cursor.style.opacity = '1';
-            if (e.touches && e.touches.length > 0) {
-                mouseX = e.touches[0].clientX;
-                mouseY = e.touches[0].clientY;
-            } else {
-                mouseX = e.clientX;
-                mouseY = e.clientY;
-            }
+            const touch = (e.touches && e.touches.length > 0) ? e.touches[0] : e;
+            mouseX = touch.clientX;
+            mouseY = touch.clientY;
         };
 
         window.addEventListener('mousemove', updateCursorPos, { passive: true });
         window.addEventListener('touchstart', updateCursorPos, { passive: true });
         window.addEventListener('touchmove', updateCursorPos, { passive: true });
+
+        // Испарение при выходе за пределы окна
+        document.addEventListener('mouseleave', () => cursor.style.opacity = '0');
+        document.addEventListener('mouseenter', () => cursor.style.opacity = '1');
 
         discordBtn.addEventListener('click', () => {
             navigator.clipboard.writeText('dnka').then(() => {
@@ -278,24 +281,20 @@
         let currentSpeed = 0, targetSpeed = 0, galleryPos = 0, marqueePos = window.innerWidth;
 
         function loop() {
-            // Курсор работает ВСЕГДА и по всему экрану
             cursorX += (mouseX - cursorX) * 0.25;
             cursorY += (mouseY - cursorY) * 0.25;
             cursor.style.transform = `translate3d(${cursorX}px, ${cursorY}px, 0) translate(-50%, -50%)`;
 
             if (animationsStarted) {
-                // Галерея
                 currentSpeed += (targetSpeed - currentSpeed) * 0.05;
                 galleryPos -= currentSpeed;
                 if (Math.abs(galleryPos) >= gallery.offsetWidth / 2) galleryPos = 0;
                 gallery.style.transform = `translateX(${galleryPos}px)`;
 
-                // Бегущая строка
                 marqueePos -= 1.5; 
                 if (marqueePos < -marqueeEl.offsetWidth) marqueePos = window.innerWidth;
                 marqueeEl.style.transform = `translateX(${marqueePos}px)`;
             }
-
             requestAnimationFrame(loop);
         }
 
@@ -309,7 +308,7 @@
 
         window.onload = () => {
             typeView();
-            loop(); // Запуск цикла отрисовки сразу
+            loop();
         };
     </script>
 </body>
