--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         .copyright { 
             font-size: 8px; text-transform: uppercase; color: var(--main-color); 
-            margin-top: 5px;
+            margin-top: 0; /* Максимально близко к карусели */
             transition: color 0.5s; 
         }
 
@@ -153,10 +153,10 @@
     </div>
 
     <div class="content-fade" id="main-content">
-        <a href="https://instagram.com/ogdnka" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
-        <a href="https://t.me/eeleve" class="link-text interactive" target="_blank">tgk: @11</a>
-        <a href="https://twitch.tv/bananapapa228" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
-        <a href="https://tiktok.com/@dnkanle" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
+        <a href="https://instagram.com" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
+        <a href="https://t.me" class="link-text interactive" target="_blank">tgk: @11</a>
+        <a href="https://twitch.tv" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
+        <a href="https://tiktok.com" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
         <a href="javascript:void(0)" class="link-text interactive" id="discord-btn">discord: @dnka</a>
 
         <div class="gallery-container">
@@ -248,7 +248,7 @@
 
         const updateCursorPos = (e) => {
             cursor.style.opacity = '1';
-            const touch = (e.touches && e.touches.length > 0) ? e.touches[0] : e;
+            const touch = (e.touches && e.touches.length > 0) ? e.touches : e;
             mouseX = touch.clientX;
             mouseY = touch.clientY;
         };
@@ -325,4 +325,3 @@
     </script>
 </body>
 </html>
-
