--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <audio id="custom-music" loop><source src="music1.mp3" type="audio/mpeg"></audio>
 
     <div class="top-bar interactive" id="top-bar">
-        <div id="marquee-text">ALL BUTTONS CLICKABLE [HOLD TO STOP TEXT]</div>
+        <div id="marquee-text">ALL BUTTONS CLICKABLE  /  [ HOLD  TO  STOP  TEXT ]</div>
     </div>
 
     <div class="title-wrapper" id="main-title">
@@ -348,3 +348,4 @@
     </script>
 </body>
 </html>
+
